feat: implement payments checkout and payment links
